agregue contido del header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 </head>
 <body>
     <header>
-        
+        <div class="subhead">
+            <h1>Ed-Travel</h1>
+            <div class="buton">
+                <button>Vuelos</button>
+                <button>Alquiler de carros</button>
+                <button>Librerias</button>
+            </div>
+            <img src="Assents/img/icono.png" alt="Mundo" class="icon">
+          </div> 
     </header>
 </body>
 </html>
