agrege imagenes de los sitios turisticos

--- a/index.html
+++ b/index.html
@@ -17,5 +17,54 @@
             <img src="Assents/img/icono.png" alt="Mundo" class="icon">
           </div> 
     </header>
+
+    <main>
+        <div>
+
+        </div>
+        <div>
+            <div>
+                <p>BOGOTA<img src="Assents/img/bogota.jpeg" alt="Bogota"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            </div>
+            <div>
+                <p>BARRANQUILLA<img src="Assents/img/barranquilla.jpg" alt="Barranquilla"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            </div>
+            <div>
+                <p>ANTIOQUIA<img src="Assents/img/antioquia.jpg" alt="Antioquia"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            </div>
+            <div>
+                <p>CARTAGENA<img src="Assents/img/cartagena.jpg" alt="Cartagena"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            </div>
+            <div>
+                <p>AMAZONAS<img src="Assents/img/amazonas.jpg" alt="Amazonas"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            </div>
+            <div>
+                <p>META<img src="Assents/img/meta.jpg" alt="Meta"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            </div>
+            <div>
+                <p>BOYACA<img src="Assents/img/boyaca.jpg" alt="Boyaca"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            </div>
+            <div>
+                <p>GUATAPE<img src="Assents/img/guatape.jpg" alt="Guatape"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            </div>
+            <div>
+                <p>CALI<img src="Assents/img/cali.jpg" alt="Cali"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            </div>
+            <div>
+                <p>MEDELLIN<img src="Assents/img/medellin.jpg" alt="Medellin"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            </div>
+            <div>
+                <p>PASTO<img src="Assents/img/pasto.jpeg" alt="Pasto"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            </div>
+            <div>
+                <p>SAN ANDRES<img src="Assents/img/san_andres.jpg" alt="San Andres"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            </div>
+            <div>
+                <p>SANTA MARTA<img src="Assents/img/santa_marta.jpg" alt="Santa Marta"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            </div>     
+        </div>
+
+    </main>
+
 </body>
 </html>
