agrege la imagenes del footer

--- a/index.html
+++ b/index.html
@@ -66,5 +66,14 @@
 
     </main>
 
+    <footer class="footer">
+        <div class="containerFooter">
+           <img src="Assents/img/whatsapp.png" alt="Whatsapp">
+           <img src="Assents/img/facebook.png" alt="Facebook">
+           <img src="Assents/img/instagram.png" alt="Instagram">
+           <img src="Assents/img/linkedin.png" alt="Linkedin">
+      </div>   
+      </footer>
+
 </body>
 </html>
