organize el header y estor organizando el body

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Styles/index.css">
     <title>Lugares Turisticos</title>
 </head>
 <body>
-    <header>
+    <header class="head">
         <div class="subhead">
             <h1>Ed-Travel</h1>
             <div class="buton">
@@ -22,45 +23,45 @@
         <div>
 
         </div>
-        <div>
-            <div>
-                <p>BOGOTA<img src="Assents/img/bogota.jpeg" alt="Bogota"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+        <div class="containerimg">
+            <div class="subContainerImg">
+                <p>BOGOTA<img src="Assents/img/bogota.jpeg" alt="Bogota"></p>
             </div>
-            <div>
-                <p>BARRANQUILLA<img src="Assents/img/barranquilla.jpg" alt="Barranquilla"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            <div class="subContainerImg">
+                <p>BARRANQUILLA<img src="Assents/img/barranquilla.jpg" alt="Barranquilla"></p>
             </div>
-            <div>
-                <p>ANTIOQUIA<img src="Assents/img/antioquia.jpg" alt="Antioquia"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            <div class="subContainerImg">
+                <p>ANTIOQUIA<img src="Assents/img/antioquia.jpg" alt="Antioquia"></p>
             </div>
-            <div>
-                <p>CARTAGENA<img src="Assents/img/cartagena.jpg" alt="Cartagena"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            <div class="subContainerImg">
+                <p>CARTAGENA<img src="Assents/img/cartagena.jpg" alt="Cartagena"></p>
             </div>
-            <div>
-                <p>AMAZONAS<img src="Assents/img/amazonas.jpg" alt="Amazonas"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            <div class="subContainerImg">
+                <p>AMAZONAS<img src="Assents/img/amazonas.jpg" alt="Amazonas"></p>
             </div>
-            <div>
-                <p>META<img src="Assents/img/meta.jpg" alt="Meta"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            <div class="subContainerImg">
+                <p>META<img src="Assents/img/meta.jpg" alt="Meta"></p>
             </div>
-            <div>
-                <p>BOYACA<img src="Assents/img/boyaca.jpg" alt="Boyaca"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            <div class="subContainerImg">
+                <p>BOYACA<img src="Assents/img/boyaca.jpg" alt="Boyaca"></p>
             </div>
-            <div>
-                <p>GUATAPE<img src="Assents/img/guatape.jpg" alt="Guatape"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            <div class="subContainerImg">
+                <p>GUATAPE<img src="Assents/img/guatape.jpg" alt="Guatape"></p>
             </div>
-            <div>
-                <p>CALI<img src="Assents/img/cali.jpg" alt="Cali"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            <div class="subContainerImg">
+                <p>CALI<img src="Assents/img/cali.jpg" alt="Cali"></p>
             </div>
-            <div>
-                <p>MEDELLIN<img src="Assents/img/medellin.jpg" alt="Medellin"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            <div class="subContainerImg">
+                <p>MEDELLIN<img src="Assents/img/medellin.jpg" alt="Medellin"></p>
             </div>
-            <div>
-                <p>PASTO<img src="Assents/img/pasto.jpeg" alt="Pasto"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            <div class="subContainerImg">
+                <p>PASTO<img src="Assents/img/pasto.jpeg" alt="Pasto"></p>
             </div>
-            <div>
-                <p>SAN ANDRES<img src="Assents/img/san_andres.jpg" alt="San Andres"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            <div class="subContainerImg">
+                <p>SAN ANDRES<img src="Assents/img/san_andres.jpg" alt="San Andres"></p>
             </div>
-            <div>
-                <p>SANTA MARTA<img src="Assents/img/santa_marta.jpg" alt="Santa Marta"><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></p>
+            <div class="subContainerImg">
+                <p>SANTA MARTA<img src="Assents/img/santa_marta.jpg" alt="Santa Marta"></p>
             </div>     
         </div>
 
