agrege contenedores al body y los organize en el css

--- a/index.html
+++ b/index.html
@@ -64,10 +64,107 @@
              </div>
         </div>
         <hr class="line">
-    </main>
-    
-    
-   
 
+        <div class="firstContainer">
+            <div>
+                <button>
+                  <h3>BOGOTA</h3>
+                  <img class="img1">
+                </button>
+            </div>
+            <div>
+                <button>
+                  <h3>BARRANQUILLA</h3>
+                  <img class="img2">
+                </button>
+            </div>
+            <div>
+                <button>
+                  <h3>ANTIOQUIA</h3>
+                  <img class="img3">
+                </button>
+            </div>
+            <div>
+                <button>
+                  <h3>CARTAGENA</h3>
+                  <img class="img4">
+                </button>
+            </div>
+            <div>
+                <button>
+                  <h3>AMAZONAS</h3>
+                  <img class="img5"> 
+                </button>
+            </div>  
+            </div>
+        </div>
+        <div class="firstContainer">
+            <div>
+                <button>
+                  <h3>BOGOTA</h3>
+                  <img class="img1">
+                </button>
+            </div>
+            <div>
+                <button>
+                  <h3>BARRANQUILLA</h3>
+                  <img class="img2">
+                </button>
+            </div>
+            <div>
+                <button>
+                  <h3>ANTIOQUIA</h3>
+                  <img class="img3">
+                </button>
+            </div>
+            <div>
+                <button>
+                  <h3>CARTAGENA</h3>
+                  <img class="img4">
+                </button>
+            </div>
+            <div>
+                <button>
+                  <h3>AMAZONAS</h3>
+                  <img class="img5"> 
+                </button>
+            </div>  
+            </div>
+        </div>
+        <div class="firstContainer">
+            <div>
+                <button>
+                  <h3>BOGOTA</h3>
+                  <img class="img1">
+                </button>
+            </div>
+            <div>
+                <button>
+                  <h3>BARRANQUILLA</h3>
+                  <img class="img2">
+                </button>
+            </div>
+            <div>
+                <button>
+                  <h3>ANTIOQUIA</h3>
+                  <img class="img3">
+                </button>
+            </div>
+            <div>
+                <button>
+                  <h3>CARTAGENA</h3>
+                  <img class="img4">
+                </button>
+            </div>
+            <div>
+                <button>
+                  <h3>AMAZONAS</h3>
+                  <img class="img5"> 
+                </button>
+            </div>  
+            </div>
+        </div>
+
+    </main>
 </body>
 </html>
