--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
         </div>
         <hr class="line">
 
+
+        
         <div class="firstContainer">
             <div>
                 <button>
@@ -98,71 +100,59 @@
             </div>  
             </div>
         </div>
-        <div class="firstContainer">
+        <div class="secondContainer">
             <div>
                 <button>
-                  <h3>BOGOTA</h3>
-                  <img class="img1">
+                  <h3>META</h3>
+                  <img class="img6">
                 </button>
             </div>
             <div>
                 <button>
-                  <h3>BARRANQUILLA</h3>
-                  <img class="img2">
+                  <h3>BOYACA</h3>
+                  <img class="img7">
                 </button>
             </div>
             <div>
                 <button>
-                  <h3>ANTIOQUIA</h3>
-                  <img class="img3">
+                  <h3>GUATAPE</h3>
+                  <img class="img8">
                 </button>
             </div>
             <div>
                 <button>
-                  <h3>CARTAGENA</h3>
-                  <img class="img4">
+                  <h3>CALI</h3>
+                  <img class="img9">
                 </button>
             </div>
             <div>
                 <button>
-                  <h3>AMAZONAS</h3>
-                  <img class="img5"> 
+                  <h3>MEDELLIN</h3>
+                  <img class="img10"> 
                 </button>
             </div>  
             </div>
         </div>
-        <div class="firstContainer">
+        <div class="thirdContainer">
             <div>
                 <button>
-                  <h3>BOGOTA</h3>
-                  <img class="img1">
+                  <h3>PASTO</h3>
+                  <img class="img11">
                 </button>
             </div>
             <div>
                 <button>
-                  <h3>BARRANQUILLA</h3>
-                  <img class="img2">
+                  <h3>SAN ANDRES</h3>
+                  <img class="img12">
                 </button>
             </div>
             <div>
                 <button>
-                  <h3>ANTIOQUIA</h3>
-                  <img class="img3">
+                  <h3>SANTA MARTA</h3>
+                  <img class="img13">
                 </button>
             </div>
-            <div>
-                <button>
-                  <h3>CARTAGENA</h3>
-                  <img class="img4">
-                </button>
-            </div>
-            <div>
-                <button>
-                  <h3>AMAZONAS</h3>
-                  <img class="img5"> 
-                </button>
-            </div>  
-            </div>
+            
         </div>
 
     </main>
