realice cambios en el diseño y agrge el footer

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <hr class="line">
 
-
+     
         
         <div class="firstContainer">
             <div>
@@ -156,5 +156,14 @@
         </div>
 
     </main>
+
+    <footer>
+      <di class="iconsFooter">
+        <img class="imgFooter1">
+        <img class="imgFooter2">
+        <img class="imgFooter3">
+        <img class="imgFooter4">
+      </di>
+    </footer>
 </body>
 </html>
