Realize unos ajustes en los botones de viaje y de personas

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="firstBody">
             <div>
                 <select name="CIUDAD_DE_DESTINO" id="CIUDAD_DE_DESTINO" class="btnBody">
+                <option value="#">CIUDAD DE DESTINO</option>
                 <option value="BOGOTA">BOGOTA</option>
                 <option value="BARRANQUILLA">BARRANQUILLA</option>
                 <option value="ANTIOQUIA">ANTIOQUIA</option>
@@ -50,6 +51,7 @@
             </div>
             <div>
                 <select name="CANTIDAD DE PERSONAS" id="CANTIDAD DE PERSONAS" class="btnBody">
+                    <option value="#">CANTIDAD DE PERSONAS</option>
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
