realize cambios en el titulo y botones del header separandolos un poco

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <header>
         <div class="subhead">
             <h1>Ed-Travel</h1>
+            <div class="btnHeader">
                 <button class="btn">Vuelos</button>
                 <button class="btn">Alquiler de carros</button>
                 <button class="btn">Librerias</button>
+              </div>
         </div>
             <img src="Assents/img/icono.png" alt="Mundo" class="icon">  
     </header>
@@ -67,8 +69,6 @@
         </div>
         <hr class="line">
 
-     
-        
         <div class="firstContainer">
             <div>
                 <button>
