Realize cambios en el nombramiento de las secciones

--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
     <main class="body">
         <div class="firstBody">
             <div>
-                <select name="CIUDAD_DE_DESTINO" id="CIUDAD_DE_DESTINO" class="btnBody">
+                <select name="ciudadDeDestino" id="ciudadDeDestino" class="btnBody">
                 <option value="#">CIUDAD DE DESTINO</option>
-                <option value="BOGOTA">BOGOTA</option>
-                <option value="BARRANQUILLA">BARRANQUILLA</option>
-                <option value="ANTIOQUIA">ANTIOQUIA</option>
-                <option value="CARTAGENA">CARTAGENA</option>
-                <option value="AMAZONAS">AMAZONAS</option>
-                <option value="META">META</option>
-                <option value="BOYACA">BOYACA</option>
-                <option value="GUATAPE">GUATAPE</option>
-                <option value="CALI">CALI</option>
-                <option value="MEDELLIN">MEDELLIN</option>
-                <option value="PASTO">PASTO</option>
-                <option value="SAN ANDRES">SAN ANDRES</option>
-                <option value="SANTA MARTA">SANTA MARTA</option>
+                <option value="bogota">BOGOTA</option>
+                <option value="barranquilla">BARRANQUILLA</option>
+                <option value="antioquia">ANTIOQUIA</option>
+                <option value="cartagena">CARTAGENA</option>
+                <option value="amazonas">AMAZONAS</option>
+                <option value="meta">META</option>
+                <option value="boyaca">BOYACA</option>
+                <option value="guatape">GUATAPE</option>
+                <option value="cali">CALI</option>
+                <option value="medellin">MEDELLIN</option>
+                <option value="pasto">PASTO</option>
+                <option value="sanAndres">SAN ANDRES</option>
+                <option value="santaMarta">SANTA MARTA</option>
                 </select>
             </div>
             <div>
@@ -52,7 +52,7 @@
                <input type="date" class="btnBody">
             </div>
             <div>
-                <select name="CANTIDAD DE PERSONAS" id="CANTIDAD DE PERSONAS" class="btnBody">
+                <select name="cantidadDePersonas" id="cantidadDePersonas" class="btnBody">
                     <option value="#">CANTIDAD DE PERSONAS</option>
                     <option value="1">1</option>
                     <option value="2">2</option>
